--- a/index.html
+++ b/index.html
@@ -1,164 +1,132 @@
-
-<script defer src="./js/storage.js"></script>
-<script defer src="./js/app.js"></script>
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Simulador de Inventario - Entregable 2</title>
+<head>
+  <meta charset="UTF-8">
+  <title>Inventario Stock - Entrega Final</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="./css/styles.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="./css/styles.css">
 
-    <script defer src="./js/app.js"></script>
-  </head>
+  <script defer src="./js/catalogo.js"></script>
+  <script defer src="./js/carrito.js"></script>
+  <script defer src="./js/ventas.js"></script>
+  <script defer src="./js/checkout.js"></script>
+  <script defer src="./js/storage.js"></script>
+  <script defer src="./js/app.js"></script>
+  <script defer src="./js/navegacion.js"></script>
+</head>
 
-  <body class="theme-bg">
+<body class="theme-bg">
+>
+  <div class="side-decor side-left"></div>
+  <div class="side-decor side-right"></div>
 
-    <!-- NAV -->
-    <nav class="navbar navbar-expand-md navbar-dark glass-nav">
-      <div class="container">
-        <a class="navbar-brand fw-bold" href="#">
-          <i class="bi bi-box-seam me-2"></i>Inventario JS
-        </a>
+  <!-- NAVBAR -->
+  <nav class="navbar navbar-dark glass-nav">
+    <div class="container d-flex justify-content-between align-items-center">
+      <span class="navbar-brand fw-bold">Inventario Stock</span>
 
-        <span class="badge rounded-pill bg-gradient-primary ms-auto">
-          Entrega 2
-        </span>
+      <div class="d-flex gap-2">
+        <button class="btn btn-outline-light btn-sm" id="btn-inventario">
+          Inventario
+        </button>
+        <button class="btn btn-outline-light btn-sm" id="btn-venta">
+          Registrar venta
+        </button>
+        <button class="btn btn-outline-light btn-sm" id="btn-historial">
+          Ventas
+        </button>
       </div>
-    </nav>
+    </div>
+  </nav>
 
-    <!-- MAIN -->
-    <main class="container mt-5">
-      <div class="row justify-content-center">
-        <div class="col-lg-10">
+  <!-- MAIN -->
+  <main class="container mt-5">
+    <section id="vista-inventario">
 
-          <div class="glass-card p-4 p-md-5 shadow-soft">
+  <div class="glass-card p-4 shadow-soft mb-5">
+    <h1 class="h4 mb-4">Control de Inventario</h1>
 
-            <div class="d-flex align-items-center gap-3 mb-4">
-              <div class="emoji-badge">📦</div>
-              <div>
-                <h1 class="h2 mb-1">Simulador de Inventario (DOM + Eventos)</h1>
-                <p class="text-secondary m-0">
-                  Evolución del simulador por consola. Interacción mediante HTML,
-                  eventos y almacenamiento en <span class="mono">localStorage</span>.
-                </p>
-              </div>
-            </div>
+    <form id="product-form" class="row g-3 mb-4">
+      <div class="col-md-4">
+        <input type="text" id="product-name" class="form-control" placeholder="Producto" required>
+      </div>
 
-            <p class="lead">
-              En esta versión, la lógica original del inventario se integra a una
-              interfaz web. Las operaciones de alta, venta, eliminación y reporte
-              se realizan mediante formularios y botones, sin uso de consola ni
-              cuadros de diálogo.
-            </p>
+      <div class="col-md-3">
+        <input type="number" id="product-price" class="form-control" placeholder="Precio" min="0" required>
+      </div>
 
-            <!-- FORMULARIO -->
-            <div class="mini-card mb-4">
-              <h2 class="h6 text-uppercase text-muted mb-3">Agregar producto</h2>
+      <div class="col-md-3">
+        <input type="number" id="product-stock" class="form-control" placeholder="Stock" min="0" required>
+      </div>
 
-              <form id="product-form" class="row g-3">
-                <div class="col-md-4">
-                  <input
-                    type="text"
-                    id="product-name"
-                    class="form-control"
-                    placeholder="Nombre del producto"
-                    required
-                  />
-                </div>
+      <div class="col-md-2 d-grid">
+        <button type="submit" class="btn btn-primary">Agregar</button>
+      </div>
+    </form>
 
-                <div class="col-md-3">
-                  <input
-                    type="number"
-                    id="product-price"
-                    class="form-control"
-                    placeholder="Precio"
-                    min="0"
-                    required
-                  />
-                </div>
+    <div class="table-responsive">
+      <table class="table table-dark table-inventory mb-0">
+        <thead>
+          <tr>
+            <th>ID</th>
+            <th>Producto</th>
+            <th class="text-end">Precio</th>
+            <th class="text-end">Stock</th>
+            <th class="text-end">Acciones</th>
+          </tr>
+        </thead>
+        <tbody id="inventory-body"></tbody>
+      </table>
+    </div>
 
-                <div class="col-md-3">
-                  <input
-                    type="number"
-                    id="product-stock"
-                    class="form-control"
-                    placeholder="Stock inicial"
-                    min="0"
-                    required
-                  />
-                </div>
+    <div class="mt-3">
+      Unidades: <strong id="total-units">0</strong> |
+      Valor total: <strong id="total-value">$ 0</strong> |
+      Mayor stock: <strong id="top-product">-</strong>
+    </div>
 
-                <div class="col-md-2 d-grid">
-                  <button type="submit" class="btn btn-primary">
-                    Agregar
-                  </button>
-                </div>
-              </form>
-            </div>
+    <button id="reset-data" class="btn btn-outline-light btn-sm mt-3">
+      Reiniciar inventario
+    </button>
+  </div>
 
-            <!-- TABLA -->
-            <div class="mini-card mb-3">
-              <h2 class="h6 text-uppercase text-muted mb-2">Inventario actual</h2>
+</section>
 
-              <div class="table-responsive">
-                <table class="table table-dark table-sm align-middle table-inventory mb-0">
-                  <thead>
-                    <tr>
-                      <th>ID</th>
-                      <th>Producto</th>
-                      <th class="text-end">Precio</th>
-                      <th class="text-end">Stock</th>
-                      <th class="text-end">Acciones</th>
-                    </tr>
-                  </thead>
-                  <tbody id="inventory-body"></tbody>
-                </table>
-              </div>
-            </div>
+    <section id="vista-ventas" class="d-none">
 
-            <!-- RESUMEN -->
-            <div class="mini-card">
-              <h2 class="h6 text-uppercase text-muted mb-2">Resumen</h2>
+      <div class="glass-card p-4 shadow-soft mb-4">
+        <h2 class="h5 mb-3">Catálogo</h2>
+        <input type="text" id="buscador" class="form-control mb-3" placeholder="Buscar libro...">
+        <div id="catalogo" class="row g-3"></div>
+      </div>
 
-              <div class="row">
-                <div class="col-md-4">
-                  Unidades totales:
-                  <span class="mono" id="total-units">0</span>
-                </div>
-                <div class="col-md-4">
-                  Valor total:
-                  <span class="mono" id="total-value">$ 0</span>
-                </div>
-                <div class="col-md-4">
-                  Mayor stock:
-                  <span class="mono" id="top-product">-</span>
-                </div>
-              </div>
+      <div class="glass-card p-4 shadow-soft">
+        <h2 class="h5 mb-3">Carrito</h2>
+        <div id="carrito"></div>
 
-              <button
-                id="reset-data"
-                class="btn btn-outline-light btn-sm mt-3"
-              >
-                Reiniciar inventario
-              </button>
-            </div>
+        <button id="finalizar-compra" class="btn btn-primary btn-sm mt-3">
+          Confirmar venta
+        </button>
 
-          </div>
+        <p id="checkout-result" class="mono mt-3"></p>
+      </div>
+
+    </section>
+
+    <section id="vista-historial" class="d-none">
+
+      <div class="glass-card p-4 shadow-soft">
+        <h2 class="h5 mb-3">Ventas realizadas</h2>
+        <div id="historial-ventas" class="text-secondary">
+          No hay ventas registradas
         </div>
       </div>
-    </main>
 
-    <!-- FOOTER -->
-    <footer class="container my-5">
-      <div class="text-center text-muted small">
-        <span class="me-2">Hecho en JavaScript</span> ·
-        <span>Archivo: <span class="mono">/js/app.js</span></span>
-      </div>
-    </footer>
+    </section>
 
-  </body>
+  </main>
+
+</body>
 </html>
